--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,36 @@
     align-items: center;
 }
 
-.cell.clicked{
+.cell.clicked {
     background-color: darkgoldenrod;
     color: white;
+    font-weight: bold;  /* Aggiungi il grassetto per una maggiore visibilità */
+}
+
+
+
+.bomb-cell {
+    background-color: red;
+    color: white;
+}
+
+
+#game-over-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0.8); /* Rosso con opacità */
+    z-index: 999; /* Assicura che il messaggio sia sopra tutto il resto */
+}
+
+#game-over-message {
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: white; /* Sfondo bianco per il messaggio */
 }
